--- a/05-MEAN/02-Tienda/Node/package.json
+++ b/05-MEAN/02-Tienda/Node/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "BORRAR",
+  "name": "Tienda3000",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
